--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 all:
-	gcc -o proxy proxy.c proxyUtilities.c handleClient.c
+	gcc -o proxy proxy.c proxyUtilities.c handleClient.c -pthread
 
 clean:
 	rm proxy
