Usado buffer del profe. Agregado código para el pipelining, pero no está probado. Hay que hacer pruebas con un servidor que lo permita y corregir lo que no funcione

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,6 @@
 all:
-	gcc -o proxy proxy.c proxyUtilities.c handleClient.c -pthread
+
+	gcc -o proxy proxy.c proxyUtilities.c buffer.c -pthread
 
 clean:
 	rm proxy
