Programa externo de prueba para comprobar la conexión de configuración

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,7 @@
 all:
 
 	gcc -o proxy proxy.c proxyUtilities.c buffer.c -pthread
+	gcc -o confClient confClient.c
 
 clean:
-	rm proxy
+	rm proxy confClient
