--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 all:
 
-	gcc -o proxy proxy.c proxyUtilities.c buffer.c -pthread
+	gcc -o proxy proxy.c proxyUtilities.c parsers.c buffer.c -pthread
 	gcc -o confClient confClient.c
 
 clean:
-	rm proxy confClient
+	rm proxy confClient retrieved_mail* transformed_mail*
