Agregadas variables de entorno, probadas con un programa de prueba (reemplazarlo por el transformador de mails). Agregadas configuraciones de puertos.

--- a/src/makefile
+++ b/src/makefile
@@ -2,6 +2,7 @@ all:
 
 	gcc -o proxy proxy.c proxyUtilities.c parsers.c buffer.c -pthread
 	gcc -o confClient confClient.c
+	gcc -o testT testT.c
 
 clean:
-	rm proxy confClient retrieved_mail* transformed_mail*
+	rm proxy confClient testT
