mime parser working

--- a/src/makefile
+++ b/src/makefile
@@ -4,5 +4,9 @@ all:
 	gcc -o confClient confClient.c
 	gcc -o testT testT.c
 
+parser_run:
+	gcc mime_parser.c parser_utils.c -o parser.out 
+	./parser.out
+
 clean:
 	rm proxy confClient testT
