Trying to make pop3 work

--- a/src/makefile
+++ b/src/makefile
@@ -5,8 +5,12 @@ all:
 	gcc -o testT testT.c
 
 parser_run:
-	gcc mime_parser.c parser_utils.c -o parser.out 
+	gcc mime_parser.c parser_utils.c -o parser.out
 	./parser.out
+
+pop3_run:
+	gcc pop3_parser.c parser_utils.c mime_parser.c -o pop3.out
+	./pop3.out
 
 clean:
 	rm proxy confClient testT
