--- a/src/makefile
+++ b/src/makefile
@@ -1,17 +1,9 @@
 all:
 
-	gcc -o proxy proxy.c proxyUtilities.c parsers.c buffer.c -pthread
-	gcc -o confClient confClient.c
+	gcc -o pop3filter proxy.c proxyUtilities.c parsers.c buffer.c -pthread
+	gcc -o pop3ctl confClient.c
 	gcc -o testT testT.c
-
-parser_run:
-	gcc mime_parser.c parser_utils.c -o parser.out
-	./parser.out
-
-pop3_run:
-	# rm "./transformed_mail_${CLIENT_NUM}.txt"
-	gcc pop3_parser.c parser_utils.c mime_parser.c -o pop3.out
-	./pop3.out
+	gcc -o stripmime pop3_parser.c parser_utils.c mime_parser.c
 
 clean:
-	rm proxy confClient testT proxy_log.txt proxy_errors_log.txt
+	rm pop3filter pop3ctl stripmime proxy_log.txt proxy_errors_log.txt testT
