--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 
 src/pop3.out
-src/transformed_mail_0.txt
-src/transformed_mail_1.txt
-src/retrieved_mail_0.txt
-src/retrieved_mail_1.txt
+src/stripmime
+src/retr_mail_*
+src/resp_mail_*
