--- a/src/makefile
+++ b/src/makefile
@@ -9,7 +9,7 @@ POP3_CLIENT_OUT=pop3ctl
 POP3_CLIENT_SOURCES=confClient.c
 
 STRIP_MIME_OUT=stripmime
-STRIP_MIME_SOURCES=transformer/pop3_parser.c transformer/parser_utils.c transformer/mime_parser.c transformer/blacklist.c transformer/buffer_utils.c transformer/boundary_utils.c transformer/validations.c
+STRIP_MIME_SOURCES=transformer/pop3_parser.c transformer/parser_utils.c transformer/mime_parser.c transformer/blacklist.c transformer/buffer_utils.c transformer/boundary_utils.c transformer/validations.c transformer/mime_state_machine.c
 
 all: $(STRIP_MIME_OUT) $(POP3_FILTER_OUT) $(POP3_CLIENT_OUT)
 
@@ -23,7 +23,7 @@ $(POP3_CLIENT_OUT):
 	$(CC) $(CFLAGS) -o $(POP3_CLIENT_OUT) $(POP3_CLIENT_SOURCES)
 
 a:
-	$(CC) -o $(STRIP_MIME_OUT) $(STRIP_MIME_SOURCES) && cp ../mime/mensajes/ii_images.mbox ./retr_mail_0100 && unix2dos ./retr_mail_0100 && FILTER_MEDIAS="image/png" ./stripmime
+		$(CC) -o $(STRIP_MIME_OUT) $(STRIP_MIME_SOURCES) $(CFLAGS) && cp ../mime/mensajes/ii_images.mbox ./retr_mail_0100 && unix2dos ./retr_mail_0100 && FILTER_MEDIAS="image/png" ./stripmime
 
 clean:
 	rm pop3filter pop3ctl stripmime proxy_log.txt proxy_errors_log.txt testT
